src/test/deca/context/valid/wobj/test_affect_compatible_int.deca
// Description:
//    Affectation et typage
//
// Resultats:
// 
// Historique:
//    cree le 01/01/2024

{
   int a = 1;
   int b;
   
   b = a;
}
