src/test/deca/context/invalid/wobj/test_decl_var_unvalid_name.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 11: Type invalide.
// 
// Historique:
//    cree le 01/01/2024

{
   inat a;
}
